# SDV_UN_R2

./: .gitmodules  Guía.md  MIGRACIÓN SDV ROS1 A ROS2.md  README.md  Readme.md  debug.md
install/camera_platform/share/camera_platform/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/camera_platform/share/camera_platform/cmake/: camera_platformConfig.cmake
install/sdv_joystick/share/ament_index/resource_index/package_run_dependencies/: sdv_joystick
install/sdv_joystick/share/sdv_joystick/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/sdv_msgs/include/sdv_msgs/sdv_msgs/msg/detail/: drivers__description.c  encoder__description.c  flexiforce__description.c  four_motors__description.c  sdv_status__description.c  two_motors__description.c  ultrasound__description.c
install/sdv_nav/share/sdv_nav/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/sdv_process/include/sdv_process/sdv_process/msg/: firebase_process.hpp  rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h
install/sdv_process/include/sdv_process/sdv_process/msg/detail/: firebase_process__description.c  firebase_process__rosidl_typesupport_fastrtps_c.h  firebase_process__rosidl_typesupport_fastrtps_cpp.hpp  firebase_process__rosidl_typesupport_introspection_cpp.hpp  firebase_process__traits.hpp  firebase_process__type_support.c  firebase_process__type_support.h  firebase_process__type_support.hpp
install/sdv_process/share/sdv_process/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/sdv_process/share/sdv_process/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  export_sdv_process__rosidl_generator_cExport.cmake  export_sdv_process__rosidl_generator_cppExport.cmake  export_sdv_process__rosidl_generator_pyExport.cmake  export_sdv_process__rosidl_typesupport_fastrtps_cExport.cmake  export_sdv_process__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  sdv_process__rosidl_typesupport_cExport-noconfig.cmake  sdv_process__rosidl_typesupport_cExport.cmake  sdv_process__rosidl_typesupport_cppExport-noconfig.cmake  sdv_process__rosidl_typesupport_introspection_cppExport-noconfig.cmake
install/sdv_process/share/sdv_process/msg/: FirebaseProcess.json
install/sdv_scripts/share/sdv_scripts/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/sdv_serial/share/ament_index/resource_index/package_run_dependencies/: sdv_serial
install/sdv_serial/share/sdv_serial/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/serial_driver/include/serial_driver/: serial_bridge_node.hpp  serial_driver.hpp  serial_port.hpp  visibility_control.hpp
install/serial_driver/lib/serial_driver/: serial_bridge
install/serial_driver/share/ament_index/resource_index/package_run_dependencies/: serial_driver
install/serial_driver/share/ament_index/resource_index/parent_prefix_path/: serial_driver
install/serial_driver/share/ament_index/resource_index/rclcpp_components/: serial_driver
install/serial_driver/share/serial_driver/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/serial_driver/share/serial_driver/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  serial_driver-extras.cmake  serial_driverConfig-version.cmake  serial_driverConfig.cmake
install/serial_driver/share/serial_driver/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
install/serial_driver/share/serial_driver/launch/: serial_driver_bridge_node.launch.py
install/serial_driver/share/serial_driver/params/: example.params.yaml
log/: latest_build
src/robot_pose_publisher/: AUTHORS.md  CHANGELOG.rst  CMakeLists.txt  package.xml
src/robot_pose_publisher/src/: CMakeLists.txt  package.xml  robot_pose_publisher.cpp
src/sdv_scripts/: CMakeLists.txt  package.xml
src/sdv_scripts/launch/: joy_control.launch  keyboard_control.launch  keyboard_control_launch.py  sdv_web_DEFUNCT.launch  udp_control.launch  udp_control_launch.py  udp_serial_test_DEFUNCT.launch
src/sdv_scripts/rviz/: config.rviz
src/sdv_scripts/src/: joy2twist.py  key2twist.py  udp2twist.py
src/sdv_un_ros/: .gitignore  README.md
src/sdv_un_ros/sdv_nav/: CMakeLists.txt
src/sdv_un_ros/sdv_nav/launch/: sdv_nav_launch.py
src/sdv_un_ros/sdv_nav/params/: sdv1_params.yaml  sdv2_params.yaml  sdv3_params.yaml
src/sdv_un_ros/sdv_nav/params/move_base/: base_local_planner_params.yaml  converter.py  costmap_common_params.yaml  eband_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml
src/sdv_un_ros/sdv_nav/params/new_move_base/: base_local_planner_params.yaml  costmap_common_params.yaml  eband_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml
src/sdv_un_ros/sdv_nav/rviz/: sdvun_amcl.rviz  sdvun_slam.rviz
src/sdv_un_ros/sdv_nav/scripts/: run_laser_node.sh
src/sdv_un_ros/sdv_nav/src/: odom_slow.py  odom_to_tf.py
src/sdv_un_ros/sdv_process/: CMakeLists.txt  package.xml
src/sdv_un_ros/sdv_process/launch/: process_launch.py
src/sdv_un_ros/sdv_serial/: CMakeLists.txt  package.xml
src/sdv_un_ros/sdv_serial/include/motor/: motor.h
src/sdv_un_ros/sdv_serial/msg/: Flexiforce.msg  Motors.msg
src/sdv_un_ros/sdv_serial/src/: motor.cpp  sdv_serial_node.cpp  sdv_serial_node22.cpp
