<?xml version="1.0"?>
<package format="3">
  <name>sdv_scripts</name>
  <version>0.0.1</version>
  <description>The sdv_scripts package for ROS 2</description>

  <maintainer email="cafsanchezdu@unal.edu.co">cafsanchezdi</maintainer>
  <license>BSD</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclpy</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>rclpy</exec_depend>

  <!-- Export package -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

